Release 3.0.2
* Primefaces 10.0.0
* remove prettyfaces
* Pass UserData as JSON
* AgentStartup java HttpClient
* CodeCoverage 36% -> 44%
* Library Updates
* yum tomcat9